sonda de arquivos esta pronta, pega todas as pastas e todos os arquivos apartir de um diretorio inicial e coloca em um Map<String,ArrayList<String>>. Proximo passo é carregar cada arquivo